update folk repository (#2)
* Update index.md

* chore(builds): Use GHActions for PR, master, and release branches. (#1697)

* chore(build-status): Build statuses via for-loops (#1696)

* chore(build-status): Build statuses via for-loops

* docs(halyard): 1.31.1

* Add Captain's Log (#1699)

* add captains log

* update infographic

* Implement syntax suggestions from Travis

* shorten traj copy and put above graphic, keeping it above fold

* add clarifying subtitle good for SEO

* remove unused image refs in head matter

* Update community/captains-log/index.md

Co-Authored-By: Dave Dorbin <ddorbin@google.com>

* add doc to repos description

Co-authored-by: Dave Dorbin <ddorbin@google.com>
Co-authored-by: brian-armory <53799971+brian-armory@users.noreply.github.com>

* doc(changelog): Spinnaker Version 1.18.2

* Deprecate 1.18.1. (#1702)

* docs(stats): Captain's log update (#1701)

* update intro and add analyses to events graph

* add analysis and values to data visualization explanations

* fix img title case

* syntax edits

* docs(faq) Deleting Spinnaker Instances (#1574)

* remove notices (#1704)

* Clarify artifact format usage with spin CLI (#1706)

* Clarify artifact format usage with spin CLI

* Update reference/artifacts/index.md

Co-Authored-By: Dave Dorbin <ddorbin@google.com>

* Update reference/artifacts/index.md

Co-Authored-By: Dave Dorbin <ddorbin@google.com>

* Update index.md

Co-authored-by: Dave Dorbin <ddorbin@google.com>

* Fix broken link in k8sv1 provider reference (#1705)

#1703

Co-authored-by: Travis Tomsu <ttomsu@google.com>

* Clarify that SPINNAKER_CONFIG_JSON does not support multi-line… (#1709)

* chore(kubernetes): highlight upcoming v1 provider removal (#1710)

* chore(kubernetes): link to v1 provider removal rfc

* chore(kubernetes): replace link to clouddriver at master with hash

* chore(kubernetes): replace v2 setup link with reference link

C