@@ -21,7 +21,7 @@ There are two ways to specify requests and limits
 
 * _(Recommended)_ By supplying the container name, e.g. `echo:`, followed by the container requests and limits.
 
-  This sets resource configuration for the echo container in `spin-echo` service's pod only, not any sidecars
+  This sets resource configuration for the `echo` container in `spin-echo` service's pod only, not any sidecars
   (e.g. the monitoring daemon).
    
 * By supplying the service name, e.g. `spin-clouddriver:`, followed by the container requests and limits.
@@ -36,7 +36,7 @@ deploymentEnvironment:
   customSizing:
     # This applies sizings to only the echo container and not to any sidecar 
     # containers running with echo.
-    spin-echo:
+    echo:
       limits:
         cpu: 250m
         memory: 512Mi
@@ -61,7 +61,7 @@ Limits and requests follow the Kubernetes conventions [documented here](https://
 All JVM-based services have the following JAVA_OPTS set:
 
 ```
-JAVA_OPTS=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=2
+JAVA_OPTS=-XX:MaxRAMPercentage=50.0
 ```
 
 This sets the JVM's heap size to half the memory allocated per container. This can be overriden by specifying your own `JAVA_OPTS` 
@@ -71,7 +71,7 @@ As a starting point, the `-Xms` can be set to 80%-90% of the requests memory all
 
 ```
 env:
-   JAVA_OPTS: "-Xms410m -Xmx819m
+   JAVA_OPTS: "-Xms410m -Xmx819m"
 ```
 
 #### Recommendations
